# ed-insights-platform

./: .env.example  .gitignore  CLAUDE.md  CONTRIBUTING.md  Makefile  README.md  docker-compose.yml
.github/workflows/: ci.yml
apps/api/: .env.example  Dockerfile  README.md  alembic.ini  entrypoint.sh  pyproject.toml
apps/api/alembic/: env.py
apps/api/alembic/versions/: 001_create_schema.py  002_seed_schools.py  003_add_conference_fields.py  004_add_school_gender_enabled.py  005_reset_gac_schools.py
apps/api/src/: config.py  database.py  main.py  models.py  schemas.py
apps/api/src/routers/: conferences.py  games.py  health.py  insights.py  players.py  schools.py  stats.py  teams.py
apps/api/tests/: conftest.py  test_games.py  test_health.py  test_insights.py  test_players.py  test_schools.py  test_stats.py  test_teams.py
apps/web/: Dockerfile  README.md  package-lock.json  package.json  tailwind.config.ts
docs/: ARCHITECTURE.md  DESIGN.md  GASTOWN.md  UI_DESIGN.md
docs/decisions/: ADR-001-monorepo-structure.md  ADR-002-fastapi-over-supabase-direct.md  ADR-003-statcrew-sidearm-scraper-strategy.md  ADR-004-parquet-files-in-git.md  ADR-005-sidearm-scraper-variants.md  ADR-006-opponent-conference-model.md  ADR-007-gac-school-membership.md  index.md
docs/mockups/: conference-full.html  conference.html  dashboard.html  nav-map.html  player.html  shell.html  standings.html  wireframes.html
docs/specs/: data-reset-gac-correct.md  eip-gac-full-scrape.md  eip-parser-fix.md  eip-schema-conference.md  pbd-gac-full-scrape.md  (+14 more)
scripts/: setup.sh  smoke-test.sh
(+34 files in other folders)
