[project]
name = "ed-insights-api"
version = "0.1.0"
description = "FastAPI backend for Ed Insights Platform"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.29",
    "alembic>=1.13",
]

[dependency-groups]
dev = [
    "ruff>=0.8",
    "pytest>=8.0",
    "httpx>=0.27",
    "aiosqlite>=0.20",
    "anyio[trio]>=4.0",
]

[tool.pytest.ini_options]
